@@ -27,65 +27,65 @@ import java.util.List;
 
 @Configuration
 public class SecurityConfig {
-  private final JwtService jwtService;
-  private final UserServiceImpl userServiceImpl;
+    private final JwtService jwtService;
+    private final UserServiceImpl userServiceImpl;
 
-  public SecurityConfig(JwtService jwtService, @Lazy UserServiceImpl userServiceImpl) {
-    this.jwtService = jwtService;
-    this.userServiceImpl = userServiceImpl;
-  }
+    public SecurityConfig(JwtService jwtService, @Lazy UserServiceImpl userServiceImpl) {
+        this.jwtService = jwtService;
+        this.userServiceImpl = userServiceImpl;
+    }
 
-  @Bean
-  MvcRequestMatcher.Builder mvc(HandlerMappingIntrospector introspector) {
-    return new MvcRequestMatcher.Builder(introspector);
-  }
+    @Bean
+    MvcRequestMatcher.Builder mvc(HandlerMappingIntrospector introspector) {
+        return new MvcRequestMatcher.Builder(introspector);
+    }
 
-  @Bean
-  public SecurityFilterChain filterChain(
-          HttpSecurity http,
-          MvcRequestMatcher.Builder mvc,
-          AuthenticationManagerBuilder authenticationManagerBuilder)
-          throws Exception {
-    AuthenticationManager authenticationManager = authenticationManagerBuilder.getOrBuild();
-    JwtAuthenticationFilter jwtAuthenticationFilter = new JwtAuthenticationFilter(authenticationManager, jwtService, userServiceImpl);
+    @Bean
+    public SecurityFilterChain filterChain(
+            HttpSecurity http,
+            MvcRequestMatcher.Builder mvc,
+            AuthenticationManagerBuilder authenticationManagerBuilder)
+            throws Exception {
+        AuthenticationManager authenticationManager = authenticationManagerBuilder.getOrBuild();
+        JwtAuthenticationFilter jwtAuthenticationFilter = new JwtAuthenticationFilter(authenticationManager, jwtService, userServiceImpl);
 
-    BearerTokenFilter bearerTokenFilter = new BearerTokenFilter(jwtService);
+        BearerTokenFilter bearerTokenFilter = new BearerTokenFilter(jwtService);
 
-    http.authorizeHttpRequests(request -> request
-            .requestMatchers(
-                    "/api/users/register",
-                    "/api/users/login",
-                    "/api/users/refresh-token").permitAll()
-            .anyRequest().authenticated());
-    http.cors((cors) -> cors
-            .configurationSource(corsConfigurationSource()));
+        http.authorizeHttpRequests(request -> request
+                .requestMatchers(
+                        "/api/users/register",
+                        "/api/users/login",
+                        "/api/users/refresh-token").permitAll()
+                .anyRequest().authenticated());
+        http.cors((cors) -> cors
+                .configurationSource(corsConfigurationSource()));
 
 
-    http.sessionManagement(sessionConfig -> sessionConfig.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
-    http.csrf(AbstractHttpConfigurer::disable);
+        http.sessionManagement(sessionConfig -> sessionConfig.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+        http.csrf(AbstractHttpConfigurer::disable);
 
-    http.addFilterBefore(jwtAuthenticationFilter, AuthorizationFilter.class);
-    http.addFilterBefore(bearerTokenFilter, AuthorizationFilter.class);
+        http.addFilterBefore(jwtAuthenticationFilter, AuthorizationFilter.class);
+        http.addFilterBefore(bearerTokenFilter, AuthorizationFilter.class);
 
-    return http.build();
-  }
+        return http.build();
+    }
 
-  @Bean
-  public PasswordEncoder passwordEncoder() {
-    return new BCryptPasswordEncoder();
-  }
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
 
-  @Bean
-  public CorsConfigurationSource corsConfigurationSource() {
-    CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-    configuration.setAllowedHeaders(List.of("*"));
-    configuration.setAllowCredentials(true);
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
 
-    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-    source.registerCorsConfiguration("/**", configuration);
-    return source;
-  }
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
 
 }
